downFile.yaml
apiVersion: v1
kind: Service
metadata:
  name: downfile
  labels:
    app: downfile
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: downfile
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: downfile
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: downfile
        version: v1
    spec:
      containers:
      - name: downfile
        image: carlo/downfile:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
          - name: down-data
            mountPath: /tmp
      volumes:
        - name: down-data
          hostPath:
            path: /data/k8s-data/downfile
            type: Directory
