downFile-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: downfile-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "down.carlo.ltd"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: downfile
spec:
  hosts:
  - "down.carlo.ltd"
  gateways:
  - downfile-gateway
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: downfile
            port:
              number: 80
